# bmk-hackerrank

./: .gitignore  CMakeLists.txt  README.md  hackerrank_util.cpp  hackerrank_util.h
abbreviation/: solution.cc
absolute_sums/: absolute_sums.py
bear_and_steady_gene/: solution.cc
beautiful_quadruples/: solution.cc
bfs/: bfs.py
bike_racers/: bike_racers.py
bike_racers/tests/: output11.txt
build_a_string/: solution.cc
build_a_string/tests/: input05.txt  input12.txt  output05.txt  output12.txt  output16.txt
common_child/: solution.cc
computer_game/: computer_game.py  solution.cc
computer_game/tests/: input04.txt  input05.txt  input07.txt  input08.txt  input09.txt  input10.txt
contacts/: solution.cc
count_strings/: solution.cc
count_strings/tests/: input02.txt  output02.txt
cut_tree/: solution.cc
find_strings/: Solution.hs  solution.cc
gena_hanoi/: gena_hanoi.py
jenny_subtree/: solution.cpp
jenny_subtree/tests/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input15.txt  input17.txt  input19.txt  input20.txt
king_richard_knights/: solution.cc
kingdom_division/: solution.cc
kingdom_division/tests/: input14.txt  output14.txt
lib/: hackerrank_lib.cpp  hackerrank_lib.h
making_candies/: solution  solution.cc
matrix_layer_rotation/: solution.cpp
max_palindromes/: Foo.hs  Solution.hs  solution.cc
max_subarray_sum/: solution.cc
maximum_index_product/: solution.cc
min_max_riddle/: solution.cc
minimum_penalty/: solution.cc
mission_points/: solution.cc
mission_points/tests/: input04.txt  input05.txt  output05.txt  output08.txt  output09.txt  output10.txt
pair_sums/: solution.cc
pair_sums/tests/: input02.txt  input03.txt  input04.txt  input06.txt  input08.txt  input19.txt  output02.txt  output03.txt  output04.txt  output06.txt  output08.txt  output19.txt
prime_digit_sums/: prime_digit_sums.py
prime_digit_sums/tests/: input01.txt  input02.txt  input04.txt  output01.txt  output02.txt  output04.txt
prime_xor/: solution.cc
prime_xor/tests/: output16.txt
problem_solving/: problem_solving.py
sherlock_anagrams/: solution.cc
sherlock_cost/: solution.cc
short_plaindrome/: solution.cc
short_plaindrome/tests/: input30.txt  output17.txt  output30.txt
sorted_subsegments/: solution.cc
sorted_subsegments/tests/: input19.txt  input22.txt  input25.txt  input27.txt  output10.txt  output19.txt  output22.txt  output25.txt  output27.txt
synchronous_shopping/: solution.cc
task_scheduling/: solution.cpp
task_scheduling/tests/: input03.txt  input08.txt  output03.txt  output08.txt
